[tool.poetry]
name = "pynecone-counter"
version = "0.1.0"
description = ""
authors = ["Giheon <74302278+Dockerel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pynecone_counter"}]

[tool.poetry.dependencies]
python = "^3.11"
pynecone = "^0.0.70"
pynecone-io = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
